@@ -1,3 +1,8 @@
+1998-09-21  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>
+
+	* sysdeps/m68k/dl-machine.h (elf_machine_lazy_rel): Slightly
+	optimized.
+
 1998-09-21 10:00  Ulrich Drepper  <drepper@cygnus.com>
 
 	* string/bits/string2.h: Add mempcpy optimization.
